--- a/Site/media/less/sobipro.less
+++ b/Site/media/less/sobipro.less
@@ -21,157 +21,12 @@
  * $Author$
  */
 
-
-.SobiPro div.modal {
-  width: 520px;
-  margin: -250px 0 0 -280px;
-  top: 50%;
-}
-
-.SobiPro .modal.fade.in {
-	top: 50%;
-}
-
-.SobiPro .popover-inner .spclose {
-  padding-right: 8px;
-  padding-top: 5px;
-  font-size: 15px;
-}
-
-.SobiPro .input-splarge {
-  width: 400px;
-}
-
-.SobiPro .thumbnail {
-  margin-bottom: 9px;
-}
-.SobiPro div.thumbcat {
-  border: none;
-  box-shadow: 0 0 0 0;
-  display: block;
-  line-height: 20px;
-  padding: 4px;
-}
-.SobiPro p.thumbcat {
-  margin: 0;
-}
-
-.SobiPro .category-container,
-.SobiPro .entry-container {
-  margin-bottom: 15px;
-  margin-top: 5px;
-}
-
-.SobiPro .btn .caret {
-  margin-bottom: 9px;
-}
-
-/* Edit an Entry base styles */
-.SobiPro .SPEntryEdit .required {
-  border-color: #7ac6ff;
-}
-
-.SobiPro .SPEntryEdit .spAlert {
-  margin-bottom: 0;
-  margin-top: 10px;
-}
-.SobiPro .SPEntryEdit .progress {
-  min-width: 100px;
-  width: 50%;
-}
-.SobiPro .SPEntryEdit .message-lightbulb {
-  margin-left: 15px;
-}
-
-
-/* Alpha Index */
-.SobiPro #alpha-index .pagination {
-  margin-top: 5px;
-}
-.SobiPro .alphalist {
-  text-align: right;
-}
-.SobiPro .alphalist .dropdown-menu {
-  text-align: left;
-}
-
+.SobiPro .input-splarge { width: 400px; }
+.SobiPro .hide { display: none; }
 .SobiPro div#sobiProFooter,
 .SobiPro div#sobiProFooter a {
   color: #999999;
   font-size: 9px;
   padding-top: 10px;
   text-decoration: none;
-}
-
-.SobiPro table.payment td {
-  line-height: 10px;
-}
-.SobiPro table tr.summary td {
-  background-color: #ffffff;
-  padding-top: 25px;
-}
-.SobiPro table tr.sum td {
-  font-weight: bold;
-}
-
-.SPSearchSelectRangeTo,
-.SPSearchSelectRangeFrom {
-  padding-bottom: 3px;
-  padding-top: 3px;
-}
-
-.SobiPro .hide {
-	display: none;
-}
-
-.SobiPro .input-prepend .alert,
-.SobiPro .input-append .alert {
-  font-size: 14px;
-}
-
-
-.SobiPro .spdFileUpload .span1,
-.SobiPro .spImageUpload .span1 {
-	margin-left: 10px;
-}
-
-.SobiPro .spdFileUpload .progress-message,
-.SobiPro .spImageUpload .progress-message {
-	margin-top: 10px;
-	margin-left: 20px;
-	clear:left;
-}
-
-.SobiPro .spImageUpload .progress-message {
-	margin-top: 15px;
-	margin-left: 10px;
-}
-
-.SobiPro .spEditImagePreview img {
-	margin: 8px;
-}
-
-.SobiPro .spImageField input[type='checkbox'] {
-	margin: 5px;
-}
-
-.SobiPro .spdFileUpload .alert,
-.SobiPro .spImageUpload .alert {
-	margin-top: 5px;
-}
-
-.SobiPro .spImageField .span2 {
-	width: 80px;
-}
-
-.SobiPro .spImageField label {
-	display: inline-block;
-}
-
-.SobiPro .disabledArea {
-	opacity: 0.3;
-	cursor:progress;
-}
-.SobiPro .disabledArea a {
-	cursor:progress;
 }
