New sample data images

--- a/Site/usr/templates/default3/css/default.less
+++ b/Site/usr/templates/default3/css/default.less
@@ -206,11 +206,13 @@ select option:focus {
     min-height: 60px;
     border: none;
     font-size: 15px;
+    padding-left: 0;
 }
 .SobiPro .topmenu .navbar-search { margin-top: 15px; }
 .SobiPro .topmenu input[type="text"] {
     border-color: darken(@base-color,5%);
 }
+.SobiPro .topmenu .navbar-search input { width: 180px; }
 
 
 // Alphalist
