--- a/Site/usr/templates/default3/css/default.css
+++ b/Site/usr/templates/default3/css/default.css
@@ -193,12 +193,16 @@ select option:focus {
   min-height: 60px;
   border: none;
   font-size: 15px;
+  padding-left: 0;
 }
 .SobiPro .topmenu .navbar-search {
   margin-top: 15px;
 }
 .SobiPro .topmenu input[type="text"] {
   border-color: #258cd1;
+}
+.SobiPro .topmenu .navbar-search input {
+  width: 180px;
 }
 .SobiPro .alphalist {
   float: left;
