--- a/Site/usr/templates/default3/css/default.css
+++ b/Site/usr/templates/default3/css/default.css
@@ -1,629 +1,3 @@
-/**
- * @version: $Id: default.css 4387 2015-02-19 12:24:35Z Radek Suski $
- * @package: SobiPro Component for Joomla!
-
- * @author
- * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
- * Email: sobi[at]sigsiu.net
- * Url: https://www.Sigsiu.NET
-
- * @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
- * @license GNU/GPL Version 3
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
- * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
- * See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
-
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
- * $Date: 2015-02-19 13:24:35 +0100 (Thu, 19 Feb 2015) $
- * $Revision: 4387 $
- * $Author: Sigrid Suski $
- */
-.SobiPro a {
-  color: #004c8f;
-}
-.SobiPro a:hover,
-.SobiPro a:focus {
-  color: #00315c;
-}
-.SobiPro .modal-body {
-  width: 95%;
-}
-.SobiPro .modal.fade.in {
-  top: 50%;
-}
-.SobiPro .popover-inner .spclose {
-  padding-right: 8px;
-  padding-top: 5px;
-  font-size: 15px;
-}
-.SobiPro .input-prepend .alert,
-.SobiPro .input-append .alert {
-  font-size: 14px;
-}
-.SobiPro .page-header {
-  margin-bottom: 10px;
-  font-size: 22px;
-  font-weight: 300;
-}
-.SobiPro h1 {
-  color: #004c8f;
-  font-size: 28px;
-}
-.SobiPro .btn,
-.SobiPro .modal,
-.SobiPro .alert,
-.SobiPro .label,
-.SobiPro .thumbnail,
-.SobiPro .popover,
-.SobiPro .dropdown-menu,
-.SobiPro select,
-.SobiPro textarea,
-.SobiPro .input-append .add-on:last-child,
-.SobiPro .input-append .btn:last-child,
-.SobiPro .input-append .btn-group:last-child > .dropdown-toggle,
-.SobiPro .bootstrap-datetimepicker-widget td,
-.SobiPro .bootstrap-datetimepicker-widget th,
-.SobiPro .bootstrap-tagsinput,
-.SobiPro .topmenu .navbar-inner,
-.SobiPro input[type="text"],
-.SobiPro input[type="password"],
-.SobiPro input[type="datetime"],
-.SobiPro input[type="datetime-local"],
-.SobiPro input[type="date"],
-.SobiPro input[type="month"],
-.SobiPro input[type="time"],
-.SobiPro input[type="week"],
-.SobiPro input[type="number"],
-.SobiPro input[type="email"],
-.SobiPro input[type="url"],
-.SobiPro input[type="search"],
-.SobiPro input[type="tel"],
-.SobiPro input[type="color"],
-.SobiPro .uneditable-input,
-.SobiPro .topmenu .navbar-search .search-query {
-  border-radius: 0;
-}
-.SobiPro .btn-group > .btn:first-child,
-.SobiPro .pagination ul > li:first-child > a,
-.SobiPro .pagination ul > li:first-child > span,
-.SobiPro .pagination-mini ul > li:first-child > a,
-.SobiPro .pagination-small ul > li:first-child > a,
-.SobiPro .pagination-mini ul > li:first-child > span,
-.SobiPro .pagination-small ul > li:first-child > span {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-}
-.SobiPro .btn-group > .btn:last-child,
-.SobiPro .btn-group > .dropdown-toggle,
-.SobiPro .pagination ul > li:last-child > a,
-.SobiPro .pagination ul > li:last-child > span,
-.SobiPro .pagination-mini ul > li:last-child > a,
-.SobiPro .pagination-small ul > li:last-child > a,
-.SobiPro .pagination-mini ul > li:last-child > span,
-.SobiPro .pagination-small ul > li:last-child > span {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.SobiPro .pagination ul > li > a,
-.SobiPro .pagination ul > li > span {
-  border-color: #3498db;
-}
-.SobiPro .pagination ul > li > a,
-.SobiPro .pagination ul > li > span {
-  border-color: #5faee3;
-}
-.SobiPro .pagination ul > li > a {
-  color: #ffffff;
-  background-color: #3498db;
-  font-weight: bold;
-}
-.SobiPro .pagination ul > li > a:hover,
-.SobiPro .pagination ul > li > a:focus,
-.SobiPro .pagination ul > .active > a,
-.SobiPro .pagination ul > .active > span {
-  color: #ffffff;
-  background-color: #004c8f;
-  font-weight: bold;
-}
-.SobiPro .pagination ul > .disabled > span,
-.SobiPro .pagination ul > .disabled > a,
-.SobiPro .pagination ul > .disabled > a:hover,
-.SobiPro .pagination ul > .disabled > a:focus {
-  font-weight: normal;
-}
-.SobiPro .dropdown-menu > li > a:hover,
-.SobiPro .dropdown-menu > li > a:focus,
-.SobiPro .dropdown-submenu:hover > a,
-.SobiPro .dropdown-submenu:focus > a {
-  color: #ffffff;
-  background-color: #004c8f;
-  background-image: none;
-}
-select option:focus {
-  background: #004c8f;
-}
-.SobiPro .thumbnail {
-  margin-bottom: 9px;
-}
-.SobiPro .label-info,
-.SobiPro .badge-info {
-  background-color: #3498db;
-}
-.SobiPro .btn-advanced {
-  color: #ffffff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #3498db;
-  background-image: linear-gradient(to bottom, #258cd1, #4aa3df);
-  background-repeat: repeat-x;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-}
-.SobiPro .btn-group.open .btn-advanced.dropdown-toggle,
-.SobiPro .btn-advanced:hover,
-.SobiPro .btn-advanced:focus,
-.SobiPro .btn-advanced:active,
-.SobiPro .btn-advanced.active {
-  background-color: #4aa3df;
-  color: #ffffff;
-}
-.SobiPro .btn-advanced .caret {
-  border-top-color: #ffffff;
-}
-.SobiPro .text-advanced {
-  color: #3498db;
-}
-.SobiPro .topmenu .nav > li,
-.SobiPro .topmenu .nav > li a:hover,
-.SobiPro .topmenu .nav > li a:focus,
-.SobiPro .topmenu .nav > li a {
-  text-shadow: none;
-  color: #ffffff;
-}
-.SobiPro .topmenu .nav > li a:focus,
-.SobiPro .topmenu .nav > li a:hover {
-  background-color: #004c8f;
-}
-.SobiPro .topmenu li {
-  line-height: 40px;
-}
-.SobiPro .topmenu .navbar-inner {
-  background-color: #3498db;
-  background-image: none;
-  min-height: 60px;
-  border: none;
-  font-size: 15px;
-  padding-left: 0;
-}
-.SobiPro .topmenu .navbar-search {
-  margin-top: 15px;
-}
-.SobiPro .topmenu input[type="text"] {
-  border-color: #258cd1;
-}
-.SobiPro .topmenu .navbar-search input {
-  width: 180px;
-}
-.SobiPro .alphalist {
-  float: left;
-  margin-right: 10px;
-  margin-top: 5px;
-}
-.SobiPro .alpha .pagination {
-  margin-top: 5px;
-}
-.SobiPro .alphalist .dropdown-menu {
-  text-align: left;
-}
-.SobiPro div.spCat {
-  border: none;
-  box-shadow: 0 0 0 0;
-  display: block;
-  line-height: 20px;
-  padding: 4px;
-}
-.SobiPro .spCatname p {
-  margin: 5px 0 0 0;
-  font-size: 15px;
-}
-.SobiPro .spCaticon i {
-  color: #3498db;
-}
-.SobiPro .spCaticon [class^="icon-"],
-.SobiPro .spCaticon [class*=" icon-"] {
-  margin-right: 0;
-}
-.SobiPro .spCaticon {
-  text-align: center;
-  margin-top: 5px;
-  padding-left: 12px;
-}
-.SobiPro .spCaticon a {
-  color: #3498db;
-}
-.SobiPro .spCaticon a:hover {
-  color: #3498db;
-  text-decoration: none;
-}
-.SobiPro .spCatintro {
-  font-size: 90%;
-  line-height: 15px;
-  color: #808080;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.SobiPro .spCategoryContainer,
-.SobiPro .entry-container {
-  margin-bottom: 15px;
-  margin-top: 15px;
-}
-.spEntryCats {
-  font-size: 80%;
-}
-.SPDetailEntry .spManage {
-  margin-right: 7px;
-  margin-top: 7px;
-}
-.entry-status i {
-  font-size: 70%;
-  color: #A90000;
-  padding-left: 5px;
-}
-a.entry-status:hover,
-a.entry-status:active,
-a.entry-status:focus {
-  text-decoration: none;
-}
-.popover {
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: normal;
-}
-.SobiPro .spAlert {
-  margin-bottom: 0;
-  background-color: #ffec5c;
-  color: #004c8f;
-  border-color: #ffe629;
-  font-weight: bold;
-  font-size: 95%;
-}
-.SobiPro .SPEntryEdit .required {
-  border-color: #7ac6ff;
-}
-.SobiPro .SPEntryEdit .progress {
-  min-width: 100px;
-  width: 50%;
-}
-.SobiPro .form-horizontal {
-  margin-right: 20px;
-}
-.SobiPro .form-horizontal .spFieldUrl {
-  display: inline;
-}
-.SobiPro .form-horizontal .spFieldUrlLabel {
-  margin-bottom: 5px;
-}
-.SobiPro .form-horizontal .spFieldUrlLabel label {
-  padding-right: 5px;
-  color: #666666;
-  margin-top: 5px;
-  float: left;
-}
-.SobiPro .form-horizontal .spFieldUrl {
-  margin-top: 10px;
-}
-.SobiPro .form-horizontal .spFieldUrl select {
-  width: 80px;
-}
-.SobiPro .spEditImagePreview {
-  float: left;
-}
-.SobiPro .spEditImagePreview img {
-  padding: 4px;
-  background-color: #FFF;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  margin: 0 5px 5px 0;
-}
-.SobiPro .spImageField input[type='checkbox'] {
-  margin: 5px;
-}
-.SobiPro .spImageField label {
-  display: inline-block;
-}
-.SobiPro .spImageUpload input {
-  height: 21px;
-}
-.SobiPro .spdFileUpload .span1,
-.SobiPro .spImageUpload .span1 {
-  margin-left: 10px;
-}
-.SobiPro .spdFileUpload .progress-message,
-.SobiPro .spImageUpload .progress-message {
-  margin-top: 10px;
-  margin-left: 20px;
-  clear: left;
-}
-.SobiPro .spImageUpload .progress-message {
-  margin-top: 15px;
-  margin-left: 10px;
-}
-.SobiPro .spdFileUpload .alert,
-.SobiPro .spImageUpload .alert {
-  margin-top: 5px;
-}
-.SigsiuTree .selected {
-  float: left;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-.SigsiuTree .selected select {
-  min-height: 200px;
-}
-.SigsiuTree .buttons {
-  clear: both;
-  padding: 10px;
-}
-.SigsiuTree .buttons button {
-  margin: 5px;
-}
-.SigsiuTree .tree {
-  float: left;
-  overflow: auto;
-  width: 50%;
-  max-height: 250px;
-}
-.SobiPro .SPEntryEdit .message-lightbulb {
-  margin-left: 15px;
-}
-.SobiPro .bootstrap-tagsinput .tag {
-  color: #ffffff;
-}
-.modal-backdrop,
-.modal-backdrop.fade.in {
-  opacity: 0.2;
-}
-.modal-backdrop {
-  background-color: #000000;
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 1040;
-}
-.SobiPro .spFieldCheckbox,
-.SobiPro .spFieldRadio {
-  float: left;
-}
-.SobiPro .spFieldRadio label,
-.SobiPro .spFieldCheckbox label {
-  color: #666666;
-  float: left;
-}
-.SobiPro .spFieldCheckbox label {
-  margin-top: 5px;
-}
-.SobiPro .spFieldRadio label {
-  margin-top: 5px;
-}
-.SobiPro .spFieldCheckbox input,
-.SobiPro .spFieldRadio input {
-  margin-left: 5px;
-  margin-right: 5px;
-  float: left;
-}
-.SobiPro .spFieldCheckbox input {
-  margin-top: 6px;
-}
-.SobiPro .spFieldRadio input {
-  margin-top: 10px;
-}
-.SPSearchInputRangeFrom,
-.SPSearchInputRangeTo {
-  float: left;
-  margin: 3px;
-}
-.SobiPro .SPSearchSelectRangeFrom,
-.SobiPro .SPSearchSelectRangeTo {
-  padding-bottom: 3px;
-  padding-top: 3px;
-}
-.SPSearchSelectRangeFrom span,
-.SPSearchSelectRangeTo span {
-  display: inline-block;
-  min-width: 34px;
-}
-.SobiPro .bootstrap-datetimepicker-widget td span.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td span.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td span.active.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td span.active[disabled],
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover:active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active.active:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active.disabled,
-.SobiPro .bootstrap-datetimepicker-widget td.active.disabled:hover,
-.SobiPro .bootstrap-datetimepicker-widget td.active[disabled],
-.SobiPro .bootstrap-datetimepicker-widget td.active[disabled]:hover {
-  color: #ffffff;
-  background-color: #3498db;
-}
-.SobiPro .bootstrap-datetimepicker-widget td span.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active,
-.SobiPro .bootstrap-datetimepicker-widget td.active:hover {
-  background-image: linear-gradient(to bottom, #258cd1, #4aa3df);
-}
-.SobiPro .bootstrap-datetimepicker-widget a [class^="icon-"] {
-  color: #3498db;
-}
-.fulldescription {
-  padding-top: 15px;
-}
-.field_city {
-  float: left;
-  padding-right: 5px;
-}
-.field_city::after {
-  content: ",";
-}
-.field_phone {
-  padding-top: 10px;
-}
-div.website {
-  padding-top: 10px;
-}
-img.field_company_logo {
-  padding: 4px;
-  background-color: #FFF;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  margin: 5px;
-}
-div.field_map {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.days {
-  margin-top: 10px;
-}
-.days li {
-  list-style: none;
-}
-.days li::before {
-  font-family: FontAwesome;
-  content: "";
-  padding-right: 5px;
-  color: #808080;
-}
-.report,
-.contact {
-  margin: 10px 0 10px 0;
-}
-.report {
-  text-align: right;
-}
-.SobiPro table.payment td {
-  line-height: 10px;
-}
-.SobiPro table tr.summary td {
-  background-color: #ffffff!important;
-  padding-top: 25px;
-}
-.SobiPro table.payment tbody tr.info > td {
-  background-color: #c2e2ff;
-}
-.SobiPro table.payment tbody tr.success > td {
-  background-color: #fff8c2;
-}
-.SobiPro table tr.sum td {
-  font-weight: bold;
-}
-.SobiPro .disabledArea {
-  opacity: 0.3;
-  cursor: progress;
-}
-.SobiPro .disabledArea a {
-  cursor: progress;
-}
-@media (max-width: 767px) {
-  .SobiPro .navbar .nav > li {
-    float: none;
-  }
-  .SobiPro .topmenu li {
-    line-height: 20px;
-  }
-  .SobiPro .topmenu .navbar-inner {
-    min-height: 20px;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .SobiPro .editor,
-  .SobiPro .form-horizontal .uneditable-input,
-  .SobiPro .form-horizontal input[type="text"],
-  .SobiPro .form-horizontal textarea,
-  .SobiPro .form-horizontal select {
-    width: 100%!important;
-  }
-  .SobiPro .form-horizontal .spImageUpload input {
-    width: 70px!important;
-    height: 31px;
-  }
-  .SobiPro .form-horizontal .spFieldUrl select {
-    margin-bottom: 3px;
-    width: 80px!important;
-  }
-  .SobiPro .form-horizontal .bootstrap-tagsinput input {
-    width: 70%!important;
-  }
-  .SobiPro .spCaticon i {
-    font-size: 2.2em;
-  }
-}
-@media (max-width: 599px) {
-  .SobiPro .entry-container > .row-fluid > [class*='span'],
-  .SobiPro .spCategoryContainer > .row-fluid > [class*='span'] {
-    width: 100%;
-    float: none;
-    margin-left: 0;
-  }
-  .SobiPro .form-horizontal .control-label {
-    float: none;
-    width: 100%;
-    text-align: left;
-  }
-  .SobiPro .form-horizontal .controls {
-    margin-left: 0;
-  }
-  .SobiPro .spEditImagePreview {
-    float: none;
-  }
-  .SobiPro .form-horizontal .spImageUpload input {
-    width: 100%!important;
-    height: 31px;
-  }
-  .SobiPro .sp-search-controls .btn {
-    width: 100%;
-  }
-  .SobiPro .btn[name="spsearchphrase"] {
-    padding: 2px 10px;
-    font-size: 12px;
-  }
-  .SobiPro .form-horizontal .control-label {
-    float: none;
-    width: 100%;
-    text-align: left;
-  }
-  .SobiPro .form-horizontal .controls {
-    margin-left: 0;
-  }
-  .SobiPro input[name="sp_search_for"],
-  .SobiPro .form-horizontal input[type="text"],
-  .SobiPro .form-horizontal select {
-    width: 100%!important;
-  }
-  .SobiPro .form-horizontal .bootstrap-tagsinput input {
-    width: 90%!important;
-  }
-  .SobiPro input[name="sp_search_for"] {
-    margin-bottom: 10px;
-  }
-  .SPSearchInputRangeFrom,
-  .SPSearchInputRangeTo {
-    float: none;
-    margin: 0;
-    width: 80%;
-  }
-  .SobiPro .spCaticon i {
-    font-size: 3em;
-  }
-}
-@media (max-width: 480px) {
-  .SobiPro .spCaticon i {
-    font-size: 1.5em;
-  }
-}
+/*------------------------------*/
+/* add your CSS styles here.... */
+/*------------------------------*/
