"Compile and Save" of LESS file. Forgot something

--- a/Admin/template/edit.xml
+++ b/Admin/template/edit.xml
@@ -32,6 +32,7 @@
 		<button type="apply" task="template.save">
 			<button type="duplicate" task="template.saveAs" />
 			<button type="compile" task="template.compile" condition="file_ext=less" />
+			<button type="compileSave" task="template.compileSave" condition="file_ext=less" />
 		</button>
 		<divider />
         <buttons icon="sitemap" buttons="sections-list" label="TB.SECTIONS" />
