New default template (Part 5)

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -43,8 +43,7 @@
   font-family: @font-family;
 }
 
-
-/* Modale Fenster */
+// Modale Fenster
 body.contentpane {
   color: @font;
   font-size: @font-size;
@@ -72,6 +71,7 @@ body.contentpane a {
 }
 .SobiPro .modal-body {
   max-height: 420px;
+  width: 96%;
 }
 .SobiPro .modal-body .btn {
   /*margin-bottom: 10px;*/
