--- a/Site/media/less/sobipro.less
+++ b/Site/media/less/sobipro.less
@@ -30,3 +30,7 @@
   padding-top: 10px;
   text-decoration: none;
 }
+//.SobiPro .modal-body { width: 100% }
+
+iframe, svg { max-width: inherit; }
+
