(!) Bootstrap responsive CSS file added by default

--- a/Site/media/less/bootstrap/bootstrap.less
+++ b/Site/media/less/bootstrap/bootstrap.less
@@ -1,9 +1,9 @@
 #ns {
   .SobiPro() {
-    @import "bootstrap.org";
+      @import "bootstrap.org.less";
+      @import "responsive.org.less";
   }
 }
-
 .SobiPro {
   #ns > .SobiPro;
 }
